# rules_keda

./: DESIGN.md  MODULE.bazel  README.md  defs.bzl
.github/workflows/: ci.yml
config/: BUILD.bazel  keda-values.yaml
examples/: README.md  cron.yaml  kafka_lag.yaml  prometheus_query.yaml  scaled_job.yaml
private/manifests/: BUILD.bazel  keda-kubesys.yaml  keda.yaml
tests/: BUILD.bazel  analysis_tests.bzl  health_wrapper.sh  install_wrapper.sh  kubesys_health_wrapper.sh  kubesys_install_wrapper.sh  smoke_test.sh
tools/: BUILD.bazel  extensions.bzl  render_keda.sh  repositories.bzl  versions.bzl  writeback.sh
