"""Tests for rules_keda.

- Analysis test verifies the macro instantiates cleanly.
- Smoke composition: kind cluster + KEDA + a tiny Deployment wrapped
  in a ScaledObject with the `cron` trigger. Smoke applies the
  Deployment with replicas=0, applies a ScaledObject whose cron
  window starts immediately and runs for 5 minutes with
  `desiredReplicas: 2`, then waits for the Deployment to scale up.
  Proves: KEDA operator reconciler + metrics server + admission
  webhook + HPA chain all work end-to-end. The cron trigger has no
  external dependency — keeps the v0.1 smoke standalone.
"""

load("@rules_itest//:itest.bzl", "itest_service", "service_test")
load("@rules_keda//:defs.bzl", "keda_health_check", "keda_install")
load("@rules_kind//:defs.bzl", "kind_cluster", "kind_health_check")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":analysis_tests.bzl", "keda_install_test_suite")

# ---- analysis ---------------------------------------------------------------

keda_install_test_suite(name = "keda_install_analysis")

# ---- smoke composition ------------------------------------------------------

kind_cluster(name = "cluster", k8s_version = "1.32")
kind_health_check(name = "cluster_health", cluster = ":cluster")
itest_service(
    name = "kind_svc",
    exe = ":cluster",
    health_check = ":cluster_health",
    tags = ["manual"],
)

keda_install(
    name = "keda_install_bin",
    tags = ["manual"],
)

keda_health_check(
    name = "keda_health_bin",
    tags = ["manual"],
)

sh_binary(
    name = "keda_install_wrapper",
    srcs = ["install_wrapper.sh"],
    data = [":keda_install_bin"],
)

sh_binary(
    name = "keda_health_wrapper",
    srcs = ["health_wrapper.sh"],
    data = [":keda_health_bin"],
)

itest_service(
    name = "keda_svc",
    exe = ":keda_install_wrapper",
    deps = [":kind_svc"],
    health_check = ":keda_health_wrapper",
    tags = ["manual"],
)

sh_test(
    name = "smoke_test_bin",
    srcs = ["smoke_test.sh"],
    tags = ["manual"],
)

service_test(
    name = "smoke_test",
    services = [":keda_svc"],
    test = ":smoke_test_bin",
    tags = [
        "manual",
        "no-sandbox",
        "requires-network",
    ],
)
