"""Maintainer-only render flow."""

load("@rules_helm//:defs.bzl", "helm_template")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# ---- 2.19.0 -----------------------------------------------------------------

helm_template(
    name = "render_keda_2_19_0",
    chart = ["@keda_chart_2_19_0//:files"],
    values = ["//config:keda-values.yaml"],
    namespace = "keda",
    release_name = "keda",
)

sh_binary(
    name = "render_writeback_2_19_0",
    srcs = ["writeback.sh"],
    data = [":render_keda_2_19_0"],
    args = [
        "$(rootpath :render_keda_2_19_0)",
        "private/manifests/keda.yaml",
    ],
    visibility = ["//visibility:public"],
)
